update neofetch config

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -8,7 +8,7 @@ print_info() {
     info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
-    info "Packages" packages
+    # info "Packages" packages
     info "Shell" shell
     info "Resolution" resolution
     info "DE" de
@@ -25,13 +25,13 @@ print_info() {
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
+    info "Battery" battery
+    info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
+    info "Local IP" local_ip
     # info "Public IP" public_ip
-    # info "Users" users
+    info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
     info cols
